Hei! Päivitin projekti kansiota ja tänne laitetaan kaikki mitä ollaan päivitetty, milloin, missä

Esim -Kahvifetis, 13.10.2013 -Tiedosto -Muokkasin/Lisäsin - Mitä?

Täten tiedetään mitä on tehty ja voidaan myös olla varmoja kuka on tehnyt virheen ja minne.

-----------------------------------------------------------------------------------------------------------------------


- Bustanity, 13.10.2013 -Paivitys -Lisasin - Kasa uusia tiedostoja PHP backendiin, Entityt, Database
ja core Application classit.