@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <title>Project Zero</title>
 
-    <!-- <script src="js/zero.js" type="text/javascript"></script> -->
+    <script src="js/game.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="style/main.css" type="text/css"/>
 </head>
