@@ -5,4 +5,7 @@ class ApplicationError
 {
     const DATABASE_CONNECTION_FAILED = -1;
     const NO_ERROR = 0;
+    const DATABASE_QUERY_ERROR = 1;
+    const ENTITY_ERROR = 2;
+    const TILE_ERROR = 3;
 }
