@@ -1,0 +1,9 @@
+<?php
+namespace Zero;
+
+
+class TileType
+{
+    const FREE = 0;
+    const ITEM = 1;
+}
