@@ -6,6 +6,8 @@ Täten tiedetään mitä on tehty ja voidaan myös olla varmoja kuka on tehnyt v
 
 -----------------------------------------------------------------------------------------------------------------------
 
+- Bustanity 13.10.2013 -Paivitys -Lisasin - Taas kerran uusia PHP tiedostoja coreen. Tile & TileMapit yms.
+test.php paivitin myoskin testaamaan uusia toimintoja.
 
 - Bustanity, 13.10.2013 -Paivitys -Lisasin - Kasa uusia tiedostoja PHP backendiin, Entityt, Database
 ja core Application classit.
